[gd_scene load_steps=7 format=3 uid="uid://ci1hsagjf5or1"]

[ext_resource type="Script" path="res://agents/gravity_wave/gravity_wave.gd" id="1_0tnli"]
[ext_resource type="Texture2D" uid="uid://b4y18jqqoybv7" path="res://assets/attack-wave-1.png" id="2_6py53"]
[ext_resource type="Texture2D" uid="uid://dserkcumi2siv" path="res://assets/attack-wave-2.png" id="3_fn5hl"]
[ext_resource type="Texture2D" uid="uid://ddbsk2ueqi2bq" path="res://assets/attack-wave-3.png" id="4_y0l4e"]
[ext_resource type="AudioStream" uid="uid://c6i7j3q1cskrk" path="res://sound/goob-shoot.wav" id="5_2m5c8"]
[ext_resource type="AudioStream" uid="uid://cwjsp3af4s6da" path="res://sound/goob-hit.wav" id="6_4vpa2"]

[node name="GravityWave" type="Node2D"]
script = ExtResource("1_0tnli")

[node name="Small" type="Area2D" parent="."]
visible = false
rotation = -0.785398

[node name="Sprite2D" type="Sprite2D" parent="Small"]
texture = ExtResource("2_6py53")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Small"]
polygon = PackedVector2Array(-6, 6, 0, 5, 5, 0, 6, -6, 4, -6, 3, -1, -1, 3, -6, 4)

[node name="Medium" type="Area2D" parent="."]
visible = false
rotation = -0.785398

[node name="Sprite2D" type="Sprite2D" parent="Medium"]
texture = ExtResource("3_fn5hl")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Medium"]
polygon = PackedVector2Array(-8, 8, 1, 6, 6, 1, 8, -8, 6, -8, 4, 0, 0, 4, -8, 6)

[node name="Large" type="Area2D" parent="."]
visible = false
rotation = -0.785398

[node name="Sprite2D" type="Sprite2D" parent="Large"]
texture = ExtResource("4_y0l4e")

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Large"]
polygon = PackedVector2Array(-10, 10, -1, 8, 7, 0, 9, -5, 9, -10, 8, -10, 5, -1, -2, 6, -10, 8)

[node name="SpawnEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_2m5c8")

[node name="HitEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_4vpa2")

[node name="TimeoutTimer" type="Timer" parent="."]
wait_time = 10.0

[connection signal="timeout" from="TimeoutTimer" to="." method="_on_timeout_timer_timeout"]
